--- a/README
+++ b/README
@@ -119,4 +119,4 @@ This project is distributed under the terms specified in the `LICENSE` file. Ple
 
 ## Acknowledgements
 
-Special thanks to Professor Charles Reiss for guidance on page table structures, and to the University of Virginia's Computer Science Department for providing resources. Additionally, thanks to all contributors who provided feedback and improvements to the implementation, and to peers for code reviews during the development phase.
+Special thanks to Professor Charles Reiss for guidance on page table structures, and to the University of Virginia's Computer Science Department for providing resources. Additionally, thanks to all peers for code reviews during the lab.
